--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-pyOpenSSL
-cryptography
-serial
-scp
-serial
-mobly
-secrets
+fabric~=3.2.2
+pyserial~=3.5
+mobly~=1.12.2
+PyYAML~=6.0.1
+invoke~=2.2.0
