Made changes to UI. 1.)capture pairing duration and display in web app 2.)capture on python side why the pairing did not happen and display that as well in app 3.)plot the pairing duration in line graph using d3js library. 4.)Added a new feature to execute scripts via web app. The UI will take arguments from user and pass it to the scripts.

--- a/logDisplayWebApp/config/config.yaml
+++ b/logDisplayWebApp/config/config.yaml
@@ -1,4 +1,6 @@
 host: 127.0.0.1
 port: 5000
 workers: 1 # used for scaling
-logs_path: /media/grl/CommonData/LOGS_MATTER/Nordic/nov_17/logs_ble_dut
+logs_path: /media/grl/CommonData/matter_python/logs
+python_environment: /media/grl/CommonData/matter_python/no
+script_path: /media/grl/CommonData/matter_python/src/python_testing/Matter_QA/Scripts/ReliabilityScripts
