--- a/Matter_QA/Configs/configFile.yaml
+++ b/Matter_QA/Configs/configFile.yaml
@@ -1,8 +1,8 @@
-rpi_config:
+rpi_config: # these parameters are used to take ssh session to a remote host and start DUT application on a raspberrypi
   rpi_hostname: "192.168.8.100"
   rpi_username: "ubuntu"
   rpi_password: "raspberrypi"
-app_config:
+app_config: # these parameters are used to start the DUT application os user's choice
   matter_app: "./chip-all-clusters-app"
   matter_app_path: "/home/ubuntu/matter_dut/connectedhomeip/examples/all-clusters-app/linux/out/all-clusters-app"
 
@@ -11,11 +11,11 @@ general_configs:
   dut_connection_timeout: 60
   commissioning_method: "on-network" # supported options "on-network", "ble-wifi, "ble-thread"
   iteration_number: 3
-  execution_mode_full: True
+  execution_mode_full: True # accept only boolean values, when set to True the script will not stop if the iteration fails
   logFilePath: /media/grl/CommonData/matter_python/logs # when null value is set the script will create a folder called 'Iteration_logs' in current directory where logs will be stored.
-  deviceModules: # if these values are not present the by default it will assume to start raspberrypi as DUt
-      module_name: raspi.py #Python file which will inherit the BaseDUTNode class and define the behaviour of the DUT Working
-      module_path: ./Matter_QA/Library/Platform/raspberrypi/ #path to the DUT class file
+  deviceModules: # this option will be used by the script only when 'platform_execution' from the above config option is set to 'CustomDUT'
+      module_name: nordic.py #Python file which will inherit the BaseDUTNode class and define the behaviour of the DUT Working
+      module_path: /home/ubuntu/matter_dut/connectedhomeip/src/python_testing/Matter_QA/Library/Platform/nordic/ #path to the DUT class file
 nordic_config:
   serial_port: "/dev/ttyACM1"
   serial_baudrate: 115200
