updated nordic.py will use common serial file and TC_ON_OFF.py is updated

--- a/Matter_QA/Configs/configFile.yaml
+++ b/Matter_QA/Configs/configFile.yaml
@@ -19,3 +19,5 @@ nordic_config:
   serial_port: "/dev/ttyACM1"
   serial_baudrate: 115200
   serial_timeout: 60
+  serial_class_path: /home/ubuntu/matter_dut/connectedhomeip/src/python_testing/Matter_QA/Library/Platform/nordic/
+  serial_class_file_name: commonSerialInterface.py
