--- a/Matter_QA/Configs/configFile.yaml
+++ b/Matter_QA/Configs/configFile.yaml
@@ -1,10 +1,3 @@
-rpi_config: # these parameters are used to take ssh session to a remote host and start DUT application on a raspberrypi
-  rpi_hostname: "192.168.8.100"
-  rpi_username: "ubuntu"
-  rpi_password: "raspberrypi"
-app_config: # these parameters are used to start the DUT application os user's choice
-  matter_app: "/home/ubuntu/matter_dut/connectedhomeip/examples/all-clusters-app/linux/out/all-clusters-app/chip-all-clusters-app"
-
 general_configs:
   platform_execution: "rpi" #use 'rpi' option for using raspberrypi as DUT, for any other option used like 'nordic' or 'CustomDUT' same name will appear in log viewer UI and 'deviceModules' option from config will be read/used
   dut_connection_timeout: 60
@@ -14,10 +7,16 @@ general_configs:
   logFilePath: /media/grl/CommonData/matter_python/logs # when null-value or invalid-path is set the script will create a folder in current directory where logs will be stored.
   deviceModules: # this option will be used by the script only when 'platform_execution' from the above config option is not 'rpi'
       module_name: nordic.py #Python file which will inherit the BaseDUTNode class and define the behaviour of the DUT Working
-      module_path: /home/ubuntu/matter_dut/connectedhomeip/src/python_testing/Matter_QA/Library/Platform/nordic/ #path to the DUT class file
+      module_path: /home/ubuntu/matter_cntrl/connectedhomeip/src/python_testing/Matter_QA/Library/Platform/nordic/ #path to the DUT class file
+
+rpi_config: # these parameters are used to take ssh session to a remote host and start DUT application on a raspberrypi
+  rpi_hostname: "192.168.8.100"
+  rpi_username: "ubuntu"
+  rpi_password: "raspberrypi"
+  app_config: # these parameters are used to start the DUT application os user's choice
+    matter_app: "/home/ubuntu/matter_cntrl/connectedhomeip/examples/all-clusters-app/linux/out/all-clusters-app/chip-all-clusters-app --discriminator 3890 --passcode 45612378"
+
 nordic_config:
   serial_port: "/dev/ttyACM1"
   serial_baudrate: 115200
   serial_timeout: 60
-  serial_class_path: /home/ubuntu/matter_dut/connectedhomeip/src/python_testing/Matter_QA/Library/Platform/nordic/
-  serial_class_file_name: commonSerialInterface.py
